practice3/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calendar
  annotations:
    linkerd.io/inject: enabled
