practice3/k8s/deployment-scheduler-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-service
  namespace: calendar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler-service
  template:
    metadata:
      labels:
        app: scheduler-service
    spec:
      containers:
        - name: scheduler-service
          image: calendar/scheduler-service:latest
          imagePullPolicy: Never
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      terminationGracePeriodSeconds: 35
