practice3/k8s/service-api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: calendar
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
