practice3/k8s/service-event-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: calendar
  labels:
    monitoring: "true"
spec:
  selector:
    app: event-service
  ports:
    - name: http
      port: 8002
      targetPort: 8002
