practice3/k8s/service-notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: calendar
  labels:
    monitoring: "true"
spec:
  selector:
    app: notification-service
  ports:
    - name: http
      port: 8003
      targetPort: 8003
