practice3/k8s/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: calendar
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
