practice3/k8s/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: calendar
  annotations:
    config.linkerd.io/opaque-ports: "6379"
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
