practice3/k8s/service-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: calendar
  labels:
    monitoring: "true"
spec:
  selector:
    app: user-service
  ports:
    - name: http
      port: 8001
      targetPort: 8001
